# nodes

./: .gitignore  README.md
backend/: ddb.bat  proto1.py  pyproject.toml  readme.md
backend/nodes/: __init__.py  base.py  datatypes.py  engine.py  errors.py  main.py  manager.py  patches.py  workflow.py
backend/nodes/builtins/: __init__.py  producers.py  requests.py  transforms.py
backend/nodes/proto1/: actions.py  input_mangement.py  tasks.py
backend/proto/: example.py
backend/proto/nodes/: base.py
backend/proto/nodes/proto1/: actions.py  tasks.py
backend/scripts/: create_and_run_workflow.py  get_all.py
backend/server/: app.py  database.py  log_config.yaml  main.py  objects.py  responses.py  utils.py
backend/server/database/: __init__.py  _nosql.py  tables.py
backend/server/routers/: forms.py  items.py  nodes.py  users.py  workflows.py
backend/tests/nodes/: test_base.py  test_engine.py  test_manager.py  test_nodes.py
backend/tests/nodes/builtins/: test_builtins.py  test_producers.py  test_requests.py  test_transforms.py  test_workflows.py
backend/tests/nodes/user_nodes/: user_nodes.py
backend/tests/server/: test_utils.py
docs/: WorkflowsDataModel.json  dataModel.xlsx  node_data.csv  prototype1.excalidraw
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  store.ts  types.d.ts
frontend/src/api/: nodeAPI.ts  workflowAPI.ts
frontend/src/components/: Editor.tsx  Header.tsx  Page.tsx
frontend/src/data/: constants.tsx  mutations.tsx  queries.tsx
(+29 files in other folders)
