[project]
name = "nodes"
version = "0.0.1"
description = "A place to test out node execution ideas"
dependencies = [
  "requests",
  "pydantic",
  "fastapi",
  "sqlalchemy",
  "uvicorn",
  "boto3",
  "shortuuid",
]

[project.optional-dependencies]
test = ["pytest"]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
